update security configuration