@@ -16,43 +16,32 @@
  */
 package alfio.controller;
 
-import alfio.config.Initializer;
-import alfio.config.WebSecurityConfig;
-import alfio.config.authentication.support.OpenIdAlfioAuthentication;
 import alfio.controller.api.v2.model.Language;
 import alfio.controller.api.v2.user.support.EventLoader;
+import alfio.controller.support.CSPConfigurer;
 import alfio.manager.PurchaseContextManager;
 import alfio.manager.i18n.MessageSourceManager;
 import alfio.manager.openid.OpenIdAuthenticationManager;
 import alfio.manager.system.ConfigurationLevel;
 import alfio.manager.system.ConfigurationManager;
-import alfio.model.*;
-import alfio.model.TicketReservation.TicketReservationStatus;
+import alfio.model.ContentLanguage;
+import alfio.model.EventDescription;
+import alfio.model.FileBlobMetadata;
+import alfio.model.TicketReservationStatusAndValidation;
 import alfio.model.system.ConfigurationKeys;
-import alfio.model.transaction.PaymentProxy;
-import alfio.model.user.Role;
 import alfio.repository.*;
 import alfio.repository.user.OrganizationRepository;
 import alfio.util.Json;
 import alfio.util.MustacheCustomTag;
 import alfio.util.RequestUtils;
-import alfio.util.TemplateManager;
 import ch.digitalfondue.jfiveparse.*;
-import lombok.AllArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.codec.binary.Hex;
 import org.apache.commons.collections4.IterableUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.env.Environment;
-import org.springframework.core.env.Profiles;
+import org.springframework.context.annotation.Profile;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.csrf.CsrfToken;
+import org.springframework.security.web.csrf.CsrfTokenRepository;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -64,52 +53,26 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.nio.charset.StandardCharsets;
-import java.security.Principal;
-import java.security.SecureRandom;
 import java.util.*;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static alfio.model.system.ConfigurationKeys.*;
+import static alfio.config.Initializer.PROFILE_LIVE;
+import static alfio.controller.Constants.*;
+import static alfio.model.system.ConfigurationKeys.BASE_CUSTOM_CSS;
 import static alfio.util.HttpUtils.APPLICATION_JSON;
+import static java.util.Objects.requireNonNull;
 
 @Controller
-@AllArgsConstructor
-@Slf4j
+@Profile(PROFILE_LIVE)
 public class IndexController {
 
-    private static final String REDIRECT_ADMIN = "redirect:/admin/";
     private static final String TEXT_HTML_CHARSET_UTF_8 = "text/html;charset=UTF-8";
     private static final String UTF_8 = "UTF-8";
 
-
-    private static final SecureRandom SECURE_RANDOM = new SecureRandom();
-
-    private static final Document INDEX_PAGE;
-    private static final Document OPEN_GRAPH_PAGE;
-    private static final String REDIRECT_PREFIX = "redirect:";
-    private static final String NOT_FOUND = "not-found";
-    private static final String EVENT_SHORT_NAME = "eventShortName";
-    private static final String NONCE = "nonce";
-    private static final String CONTENT = "content";
-    private static final String PROPERTY = "property";
-
-    static {
-        try (var idxIs = new ClassPathResource("alfio-public-frontend-index.html").getInputStream();
-             var idxOpenIs = new ClassPathResource("alfio/web-templates/event-open-graph-page.html").getInputStream();
-             var idxIsR = new InputStreamReader(idxIs, StandardCharsets.UTF_8);
-             var idxOpenGraphReader = new InputStreamReader(idxOpenIs, StandardCharsets.UTF_8)) {
-            INDEX_PAGE = JFiveParse.parse(idxIsR);
-            OPEN_GRAPH_PAGE = JFiveParse.parse(idxOpenGraphReader);
-        } catch (IOException e) {
-            throw new IllegalStateException(e);
-        }
-    }
-
+    private final Document indexPage;
+    private final Document openGraphPage;
     private final ConfigurationManager configurationManager;
     private final EventRepository eventRepository;
-    private final Environment environment;
-    private final TemplateManager templateManager;
     private final FileUploadRepository fileUploadRepository;
     private final MessageSourceManager messageSourceManager;
     private final EventDescriptionRepository eventDescriptionRepository;
@@ -119,6 +82,45 @@ public class IndexController {
     private final EventLoader eventLoader;
     private final PurchaseContextManager purchaseContextManager;
     private final Json json;
+    private final CsrfTokenRepository csrfTokenRepository;
+    private final CSPConfigurer cspConfigurer;
+
+    public IndexController(ConfigurationManager configurationManager,
+                           EventRepository eventRepository,
+                           FileUploadRepository fileUploadRepository,
+                           MessageSourceManager messageSourceManager,
+                           EventDescriptionRepository eventDescriptionRepository,
+                           OrganizationRepository organizationRepository,
+                           TicketReservationRepository ticketReservationRepository,
+                           SubscriptionRepository subscriptionRepository,
+                           EventLoader eventLoader,
+                           PurchaseContextManager purchaseContextManager,
+                           CsrfTokenRepository csrfTokenRepository,
+                           CSPConfigurer cspConfigurer,
+                           Json json) {
+        this.configurationManager = configurationManager;
+        this.eventRepository = eventRepository;
+        this.fileUploadRepository = fileUploadRepository;
+        this.messageSourceManager = messageSourceManager;
+        this.eventDescriptionRepository = eventDescriptionRepository;
+        this.organizationRepository = organizationRepository;
+        this.ticketReservationRepository = ticketReservationRepository;
+        this.subscriptionRepository = subscriptionRepository;
+        this.eventLoader = eventLoader;
+        this.purchaseContextManager = purchaseContextManager;
+        this.csrfTokenRepository = csrfTokenRepository;
+        this.cspConfigurer = cspConfigurer;
+        this.json = json;
+        try (var idxIs = new ClassPathResource("alfio-public-frontend-index.html").getInputStream();
+             var idxOpenIs = new ClassPathResource("alfio/web-templates/event-open-graph-page.html").getInputStream();
+             var idxIsR = new InputStreamReader(idxIs, StandardCharsets.UTF_8);
+             var idxOpenGraphReader = new InputStreamReader(idxOpenIs, StandardCharsets.UTF_8)) {
+            indexPage = JFiveParse.parse(idxIsR);
+            openGraphPage = JFiveParse.parse(idxOpenGraphReader);
+        } catch (IOException e) {
+            throw new IllegalStateException(e);
+        }
+    }
 
 
     @RequestMapping(value = "/", method = RequestMethod.HEAD)
@@ -135,32 +137,32 @@ public class IndexController {
     //url defined in the angular app in app-routing.module.ts
     /**
      <pre>{@code
-     { path: '', component: EventListComponent, canActivate: [LanguageGuard] },
-     { path: 'event/:eventShortName', component: EventDisplayComponent, canActivate: [EventGuard, LanguageGuard] },
-     { path: 'event/:eventShortName/poll', loadChildren: () => import('./poll/poll.module').then(m => m.PollModule), canActivate: [EventGuard, LanguageGuard] },
-     { path: 'event/:eventShortName/reservation/:reservationId', children: [
-     { path: 'book', component: BookingComponent, canActivate: reservationsGuard },
-     { path: 'overview', component: OverviewComponent, canActivate: reservationsGuard },
-     { path: 'waitingPayment', redirectTo: 'waiting-payment'},
-     { path: 'waiting-payment', component: OfflinePaymentComponent, canActivate: reservationsGuard },
-     { path: 'deferred-payment', component: DeferredOfflinePaymentComponent, canActivate: reservationsGuard },
-     { path: 'processing-payment', component: ProcessingPaymentComponent, canActivate: reservationsGuard },
-     { path: 'success', component: SuccessComponent, canActivate: reservationsGuard },
-     { path: 'not-found', component: NotFoundComponent, canActivate: reservationsGuard },
-     { path: 'error', component: ErrorComponent, canActivate: reservationsGuard },
-     ]},
-     { path: 'event/:eventShortName/ticket/:ticketId', children: [
-     { path: 'view', component: ViewTicketComponent, canActivate: [EventGuard, LanguageGuard] },
-     { path: 'update', component: UpdateTicketComponent, canActivate: [EventGuard, LanguageGuard] }
-     ]}
+    { path: '', component: EventListComponent, canActivate: [LanguageGuard] },
+    { path: 'event/:eventShortName', component: EventDisplayComponent, canActivate: [EventGuard, LanguageGuard] },
+    { path: 'event/:eventShortName/poll', loadChildren: () => import('./poll/poll.module').then(m => m.PollModule), canActivate: [EventGuard, LanguageGuard] },
+    { path: 'event/:eventShortName/reservation/:reservationId', children: [
+    { path: 'book', component: BookingComponent, canActivate: reservationsGuard },
+    { path: 'overview', component: OverviewComponent, canActivate: reservationsGuard },
+    { path: 'waitingPayment', redirectTo: 'waiting-payment'},
+    { path: 'waiting-payment', component: OfflinePaymentComponent, canActivate: reservationsGuard },
+    { path: 'deferred-payment', component: DeferredOfflinePaymentComponent, canActivate: reservationsGuard },
+    { path: 'processing-payment', component: ProcessingPaymentComponent, canActivate: reservationsGuard },
+    { path: 'success', component: SuccessComponent, canActivate: reservationsGuard },
+    { path: 'not-found', component: NotFoundComponent, canActivate: reservationsGuard },
+    { path: 'error', component: ErrorComponent, canActivate: reservationsGuard },
+    ]},
+    { path: 'event/:eventShortName/ticket/:ticketId', children: [
+    { path: 'view', component: ViewTicketComponent, canActivate: [EventGuard, LanguageGuard] },
+    { path: 'update', component: UpdateTicketComponent, canActivate: [EventGuard, LanguageGuard] }
+    ]}
     }
      </pre>
      Poll routing:
      <pre>{@code
-     { path: '', component: PollComponent, children: [
-     {path: '', component: PollSelectionComponent },
-     {path: ':pollId', component: DisplayPollComponent }
-     ]}
+    { path: '', component: PollComponent, children: [
+    {path: '', component: PollSelectionComponent },
+    {path: ':pollId', component: DisplayPollComponent }
+    ]}
     }
      </pre>
 
@@ -214,25 +216,32 @@ public class IndexController {
 
         response.setContentType(TEXT_HTML_CHARSET_UTF_8);
         response.setCharacterEncoding(UTF_8);
-        var nonce = addCspHeader(response, detectConfigurationLevel(eventShortName, subscriptionId), true);
+        var nonce = cspConfigurer.addCspHeader(response, detectConfigurationLevel(eventShortName, subscriptionId), true);
 
         if (eventShortName != null && RequestUtils.isSocialMediaShareUA(userAgent) && eventRepository.existsByShortName(eventShortName)) {
             try (var os = response.getOutputStream(); var osw = new OutputStreamWriter(os, StandardCharsets.UTF_8)) {
-                var res = getOpenGraphPage((Document) OPEN_GRAPH_PAGE.cloneNode(true), eventShortName, request, lang);
+                var res = getOpenGraphPage((Document) openGraphPage.cloneNode(true), eventShortName, request, lang);
                 JFiveParse.serialize(res, osw);
             }
         } else {
             try (var os = response.getOutputStream(); var osw = new OutputStreamWriter(os, StandardCharsets.UTF_8)) {
                 var baseCustomCss = configurationManager.getForSystem(BASE_CUSTOM_CSS).getValueOrNull();
-                var idx = INDEX_PAGE.cloneNode(true);
+                var idx = indexPage.cloneNode(true);
                 if(session.getAttribute(OpenIdAuthenticationManager.USER_SIGNED_UP) != null) {
                     Optional.ofNullable(IterableUtils.get(idx.getElementsByTagName("html"), 0))
-                            .ifPresent(html -> html.setAttribute("data-signed-up", "true"));
+                        .ifPresent(html -> html.setAttribute("data-signed-up", "true"));
                     session.removeAttribute(OpenIdAuthenticationManager.USER_SIGNED_UP);
                 }
                 idx.getElementsByTagName("script").forEach(element -> element.setAttribute(NONCE, nonce));
                 var head = idx.getElementsByTagName("head").get(0);
                 head.appendChild(buildScripTag(json.asJsonString(configurationManager.getInfo(session)), APPLICATION_JSON, "preload-info", null));
+                var httpServletRequest = requireNonNull(request.getNativeRequest(HttpServletRequest.class));
+                head.appendChild(buildMetaTag("GID", request.getSessionId()));
+                var csrf = csrfTokenRepository.loadToken(httpServletRequest);
+                if (csrf == null) {
+                    csrf = csrfTokenRepository.generateToken(httpServletRequest);
+                }
+                head.appendChild(buildMetaTag("XSRF_TOKEN", csrf.getToken()));
                 if (baseCustomCss != null) {
                     var style = new Element("style");
                     style.setAttribute("type", "text/css");
@@ -252,7 +261,7 @@ public class IndexController {
         if (eventRepository.existsByShortName(eventShortName)) {
             var reservationStatusUrlSegment = ticketReservationRepository.findOptionalStatusAndValidationById(reservationId)
                 .map(IndexController::reservationStatusToUrlMapping).orElse(NOT_FOUND);
-            return REDIRECT_PREFIX + UriComponentsBuilder.fromPath("/event/{eventShortName}/reservation/{reservationId}/{status}")
+            return REDIRECT + UriComponentsBuilder.fromPath("/event/{eventShortName}/reservation/{reservationId}/{status}")
                 // if subscription param is present, we forward it to the reservation resource
                 .queryParamIfPresent("subscription", Optional.ofNullable(StringUtils.trimToNull(subscriptionId)))
                 .buildAndExpand(Map.of(EVENT_SHORT_NAME, eventShortName, "reservationId", reservationId, "status",reservationStatusUrlSegment))
@@ -268,7 +277,7 @@ public class IndexController {
             var reservationStatusUrlSegment = ticketReservationRepository.findOptionalStatusAndValidationById(reservationId)
                 .map(IndexController::reservationStatusToUrlMapping).orElse(NOT_FOUND);
 
-            return REDIRECT_PREFIX + UriComponentsBuilder.fromPath("/subscription/{subscriptionId}/reservation/{reservationId}/{status}")
+            return REDIRECT + UriComponentsBuilder.fromPath("/subscription/{subscriptionId}/reservation/{reservationId}/{status}")
                 .buildAndExpand(Map.of("subscriptionId", subscriptionId, "reservationId", reservationId, "status",reservationStatusUrlSegment))
                 .toUriString();
         } else {
@@ -291,13 +300,13 @@ public class IndexController {
             if (eventInfoOptional.isPresent()) {
                 var ev = eventInfoOptional.get();
                 head.appendChild(buildScripTag(json.asJsonString(ev), APPLICATION_JSON, "preload-event", eventShortName));
-                preloadLang = getMatchingLocale(request, ev.getContentLanguages().stream().map(Language::getLocale).collect(Collectors.toList()), lang).getLanguage();
+                preloadLang = getMatchingLocale(request, ev.getContentLanguages().stream().map(Language::getLocale).toList(), lang).getLanguage();
             }
         }
-        head.appendChild(buildScripTag(json.asJsonString(messageSourceManager.getBundleAsMap("alfio.i18n.public", true, preloadLang)), "application/json", "preload-bundle", preloadLang));
+        head.appendChild(buildScripTag(json.asJsonString(messageSourceManager.getBundleAsMap("alfio.i18n.public", true, preloadLang, MessageSourceManager.PUBLIC_FRONTEND)), "application/json", "preload-bundle", preloadLang));
         // add fallback in english
         if (!"en".equals(preloadLang)) {
-            head.appendChild(buildScripTag(json.asJsonString(messageSourceManager.getBundleAsMap("alfio.i18n.public", true, "en")), "application/json", "preload-bundle", "en"));
+            head.appendChild(buildScripTag(json.asJsonString(messageSourceManager.getBundleAsMap("alfio.i18n.public", true, "en", MessageSourceManager.PUBLIC_FRONTEND)), "application/json", "preload-bundle", "en"));
         }
         var htmlElement = IterableUtils.get(idx.getElementsByTagName("html"), 0);
         htmlElement.setAttribute("lang", preloadLang);
@@ -315,21 +324,15 @@ public class IndexController {
     }
 
     private static String reservationStatusToUrlMapping(TicketReservationStatusAndValidation status) {
-        switch (status.getStatus()) {
-            case PENDING: return Boolean.TRUE.equals(status.getValidated()) ? "overview" : "book";
-            case COMPLETE:
-            case FINALIZING:
-                return "success";
-            case OFFLINE_PAYMENT:
-            case OFFLINE_FINALIZING:
-                return "waiting-payment";
-            case DEFERRED_OFFLINE_PAYMENT: return "deferred-payment";
-            case EXTERNAL_PROCESSING_PAYMENT:
-            case WAITING_EXTERNAL_CONFIRMATION: return "processing-payment";
-            case IN_PAYMENT:
-            case STUCK: return "error";
-            default: return NOT_FOUND; // <- this may be a little bit aggressive
-        }
+        return switch (status.getStatus()) {
+            case PENDING -> Boolean.TRUE.equals(status.getValidated()) ? "overview" : "book";
+            case COMPLETE, FINALIZING -> "success";
+            case OFFLINE_PAYMENT, OFFLINE_FINALIZING -> "waiting-payment";
+            case DEFERRED_OFFLINE_PAYMENT -> "deferred-payment";
+            case EXTERNAL_PROCESSING_PAYMENT, WAITING_EXTERNAL_CONFIRMATION -> "processing-payment";
+            case IN_PAYMENT, STUCK -> "error";
+            default -> NOT_FOUND; // <- this may be a little bit aggressive
+        };
     }
 
 
@@ -353,7 +356,7 @@ public class IndexController {
     // use ngrok to test the preview
     private Document getOpenGraphPage(Document eventOpenGraph, String eventShortName, ServletWebRequest request, String lang) {
         var event = eventRepository.findByShortName(eventShortName);
-        var locale = getMatchingLocale(request, event.getContentLanguages().stream().map(ContentLanguage::getLanguage).collect(Collectors.toList()), lang);
+        var locale = getMatchingLocale(request, event.getContentLanguages().stream().map(ContentLanguage::getLanguage).toList(), lang);
 
         var baseUrl = configurationManager.getForSystem(ConfigurationKeys.BASE_URL).getRequiredValue();
 
@@ -384,18 +387,26 @@ public class IndexController {
         fileUploadRepository.findById(event.getFileBlobId()).ifPresent(metadata -> {
             var attributes = metadata.getAttributes();
             if (attributes.containsKey(FileBlobMetadata.ATTR_IMG_HEIGHT) && attributes.containsKey(FileBlobMetadata.ATTR_IMG_WIDTH)) {
-                head.appendChild(buildMetaTag("og:image:width", attributes.get(FileBlobMetadata.ATTR_IMG_WIDTH)));
-                head.appendChild(buildMetaTag("og:image:height", attributes.get(FileBlobMetadata.ATTR_IMG_HEIGHT)));
+                head.appendChild(buildOGMetaTag("og:image:width", attributes.get(FileBlobMetadata.ATTR_IMG_WIDTH)));
+                head.appendChild(buildOGMetaTag("og:image:height", attributes.get(FileBlobMetadata.ATTR_IMG_HEIGHT)));
             }
         });
 
         return eventOpenGraph;
     }
 
-    private static Element buildMetaTag(String propertyValue, String contentValue) {
+    private static Element buildOGMetaTag(String propertyValue, String contentValue) {
+        return buildMetaTag(PROPERTY, propertyValue, contentValue);
+    }
+
+    private static Element buildMetaTag(String name, String content) {
+        return buildMetaTag("name", name, content);
+    }
+
+    private static Element buildMetaTag(String property, String propertyValue, String content) {
         var meta = new Element("meta");
-        meta.setAttribute(PROPERTY, propertyValue);
-        meta.setAttribute(CONTENT, contentValue);
+        meta.setAttribute(property, propertyValue);
+        meta.setAttribute(CONTENT, content);
         return meta;
     }
 
@@ -408,153 +419,13 @@ public class IndexController {
         "/e/{eventShortName}/c/{code}"})
     public String redirectCode(@PathVariable(EVENT_SHORT_NAME) String eventName,
                                @PathVariable("code") String code) {
-        return REDIRECT_PREFIX + UriComponentsBuilder.fromPath("/api/v2/public/event/{eventShortName}/code/{code}")
+        return REDIRECT + UriComponentsBuilder.fromPath("/api/v2/public/event/{eventShortName}/code/{code}")
             .build(Map.of(EVENT_SHORT_NAME, eventName, "code", code));
     }
 
     @GetMapping("/e/{eventShortName}")
     public String redirectEvent(@PathVariable(EVENT_SHORT_NAME) String eventName) {
-        return REDIRECT_PREFIX + UriComponentsBuilder.fromPath("/event/{eventShortName}").build(Map.of(EVENT_SHORT_NAME, eventName));
-    }
-
-    // login related
-    @GetMapping("/authentication")
-    public void getLoginPage(@RequestParam(value="failed", required = false) String failed,
-                             @RequestParam(value = "recaptchaFailed", required = false) String recaptchaFailed,
-                             Model model,
-                             Principal principal,
-                             HttpServletRequest request,
-                             HttpServletResponse response,
-                             @Value("${alfio.version}") String version) throws IOException {
-
-        if(principal != null) {
-            response.sendRedirect("/admin/");
-            return;
-        }
-        model.addAttribute("failed", failed != null);
-        model.addAttribute("recaptchaFailed", recaptchaFailed != null);
-        model.addAttribute("hasRecaptchaApiKey", false);
-
-        //
-        addCommonModelAttributes(model, request, version);
-        model.addAttribute("request", request);
-
-        //
-
-        var configuration = configurationManager.getFor(EnumSet.of(RECAPTCHA_API_KEY, ENABLE_CAPTCHA_FOR_LOGIN), ConfigurationLevel.system());
-
-        configuration.get(RECAPTCHA_API_KEY).getValue()
-            .filter(key -> configuration.get(ENABLE_CAPTCHA_FOR_LOGIN).getValueAsBooleanOrDefault())
-            .ifPresent(key -> {
-                model.addAttribute("hasRecaptchaApiKey", true);
-                model.addAttribute("recaptchaApiKey", key);
-            });
-        try (var os = response.getOutputStream()) {
-            response.setContentType(TEXT_HTML_CHARSET_UTF_8);
-            response.setCharacterEncoding(UTF_8);
-            var nonce = addCspHeader(response, false);
-            model.addAttribute(NONCE, nonce);
-            templateManager.renderHtml(new ClassPathResource("alfio/web-templates/login.ms"), model.asMap(), os);
-        }
-    }
-
-    @PostMapping("/authenticate")
-    public String doLogin() {
-        return REDIRECT_ADMIN;
-    }
-    //
-
-
-    // admin index
-    @GetMapping("/admin")
-    public void adminHome(Model model, @Value("${alfio.version}") String version, HttpServletRequest request, HttpServletResponse response, Principal principal) throws IOException {
-        model.addAttribute("alfioVersion", version);
-        model.addAttribute("username", principal.getName());
-        model.addAttribute("basicConfigurationNeeded", configurationManager.isBasicConfigurationNeeded());
-
-        boolean isDBAuthentication = !(principal instanceof OpenIdAlfioAuthentication);
-        model.addAttribute("isDBAuthentication", isDBAuthentication);
-        if (!isDBAuthentication) {
-            String idpLogoutRedirectionUrl = ((OpenIdAlfioAuthentication) SecurityContextHolder.getContext().getAuthentication()).getIdpLogoutRedirectionUrl();
-            model.addAttribute("idpLogoutRedirectionUrl", idpLogoutRedirectionUrl);
-        } else {
-            model.addAttribute("idpLogoutRedirectionUrl", null);
-        }
-
-        Collection<String> authorities = SecurityContextHolder.getContext().getAuthentication().getAuthorities()
-            .stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
-
-        boolean isAdmin = authorities.contains(Role.ADMIN.getRoleName());
-        model.addAttribute("isOwner", isAdmin || authorities.contains(Role.OWNER.getRoleName()));
-        model.addAttribute("isAdmin", isAdmin);
-        //
-        addCommonModelAttributes(model, request, version);
-        model.addAttribute("displayProjectBanner", isAdmin && configurationManager.getForSystem(SHOW_PROJECT_BANNER).getValueAsBooleanOrDefault());
-        //
-
-        try (var os = response.getOutputStream()) {
-            response.setContentType(TEXT_HTML_CHARSET_UTF_8);
-            response.setCharacterEncoding(UTF_8);
-            var nonce = addCspHeader(response, false);
-            model.addAttribute(NONCE, nonce);
-            templateManager.renderHtml(new ClassPathResource("alfio/web-templates/admin-index.ms"), model.asMap(), os);
-        }
-    }
-
-    private void addCommonModelAttributes(Model model, HttpServletRequest request, String version) {
-        var contextPath = StringUtils.appendIfMissing(request.getContextPath(), "/") + version;
-        model.addAttribute("contextPath", contextPath);
-        model.addAttribute("demoModeEnabled", environment.acceptsProfiles(Profiles.of(Initializer.PROFILE_DEMO)));
-        model.addAttribute("devModeEnabled", environment.acceptsProfiles(Profiles.of(Initializer.PROFILE_DEV)));
-        model.addAttribute("prodModeEnabled", environment.acceptsProfiles(Profiles.of(Initializer.PROFILE_LIVE)));
-        model.addAttribute(WebSecurityConfig.CSRF_PARAM_NAME, request.getAttribute(CsrfToken.class.getName()));
-    }
-
-
-    private static String getNonce() {
-        var nonce = new byte[16]; //128 bit = 16 bytes
-        SECURE_RANDOM.nextBytes(nonce);
-        return Hex.encodeHexString(nonce);
-    }
-
-    public String addCspHeader(HttpServletResponse response, boolean embeddingSupported) {
-        return addCspHeader(response, ConfigurationLevel.system(), embeddingSupported);
-    }
-
-    public String addCspHeader(HttpServletResponse response, ConfigurationLevel configurationLevel, boolean embeddingSupported) {
-
-        var nonce = getNonce();
-
-        String reportUri = "";
-
-        var conf = configurationManager.getFor(List.of(SECURITY_CSP_REPORT_ENABLED, SECURITY_CSP_REPORT_URI, EMBED_ALLOWED_ORIGINS), configurationLevel);
-
-        boolean enabledReport = conf.get(SECURITY_CSP_REPORT_ENABLED).getValueAsBooleanOrDefault();
-        if (enabledReport) {
-            reportUri = " report-uri " + conf.get(SECURITY_CSP_REPORT_URI).getValueOrDefault("/report-csp-violation");
-        }
-        //
-        // https://csp.withgoogle.com/docs/strict-csp.html
-        // with base-uri set to 'self'
-
-        var frameAncestors = "'none'";
-        var allowedContainer = conf.get(EMBED_ALLOWED_ORIGINS).getValueOrNull();
-        if (embeddingSupported && StringUtils.isNotBlank(allowedContainer)) {
-            var splitHosts = allowedContainer.split("[,\n]");
-            frameAncestors = String.join(" ", splitHosts);
-            // IE11
-            response.addHeader("X-Frame-Options", "ALLOW-FROM "+splitHosts[0]);
-        } else {
-            response.addHeader("X-Frame-Options", "DENY");
-        }
-
-        response.addHeader("Content-Security-Policy", "object-src 'none'; "+
-            "script-src 'strict-dynamic' 'nonce-" + nonce + "' 'unsafe-inline' http: https:; " +
-            "base-uri 'self'; " +
-            "frame-ancestors " + frameAncestors + "; "
-            + reportUri);
-
-        return nonce;
+        return REDIRECT + UriComponentsBuilder.fromPath("/event/{eventShortName}").build(Map.of(EVENT_SHORT_NAME, eventName));
     }
 
     private ConfigurationLevel detectConfigurationLevel(String eventShortName, String subscriptionId) {
